--- a/apps/interface/templates/base.html
+++ b/apps/interface/templates/base.html
@@ -13,6 +13,9 @@
     </head>
 
     <body>
+        <header>
+            {% include 'snippets/navbar.html' %}
+        </header>
         <main>
             {% block main_content %}
             {% endblock %}
