--- a/apps/interface/templates/snippets/navbar.html
+++ b/apps/interface/templates/snippets/navbar.html
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="navbarToggler">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Leases</a>
+          <a class="nav-link active" href="/leases/">Leases</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
