--- a/apps/interface/leases/templates/leases/index.html
+++ b/apps/interface/leases/templates/leases/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
 {% block main_content %}
-<h1>Hello, world!</h1>
+<div class="container-fluid">
+  <h1>Active leases</h1>
+</div>
 {% endblock %}
