--- a/apps/interface/leases/templates/leases/index.html
+++ b/apps/interface/leases/templates/leases/index.html
@@ -7,30 +7,21 @@
   <table class="table">
     <thead>
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">Account ID</th>
+        <th scope="col">User</th>
+        <th scope="col">Expires</th>
+        <th scope="col">Lease ID</th>
       </tr>
     </thead>
     <tbody>
+      {% for lease in active_leases %}
       <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
+        <td>{{ lease.account }}</td>
+        <td>{{ lease.user }}</td>
+        <td>{{ lease.expires }}</td>
+        <td>{{ lease.lease_id }}</td>
       </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td colspan="2">Larry the Bird</td>
-        <td>@twitter</td>
-      </tr>
+      {% endfor %}
     </tbody>
   </table>
 </div>
